src/runtime/tests/data/positive/float.hsh
std.assert(std.float(1) == 1.0)
std.assert(std.float(1.0) == 1.0)
std.assert(std.float("1") == 1.0)
std.assert(std.float("1.") == 1.0)
