src/runtime/tests/data/negative/closures.hsh
function fun()
	let x = 0

	let fun = function()
		x
	end

	x = 1
	return fun
end

std.assert(fun()() == 0)
